add profile reset endpoint
